pound/tests/ui/default_missing_count.stderr
error: pound: #[pound(default_missing = "...")] needs an `Option<T>` named option (short/long), not a positional, bool, count, `Vec<T>`, or required value (`verbose`)
 --> tests/ui/default_missing_count.rs:5:10
  |
5 | #[derive(Parse)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Parse` (in Nightly builds, run with -Z macro-backtrace for more info)
